pdf and other changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
         <div class="hero__cta">
           <a class="button button--primary" href="#join">Become a Member</a>
-          <a class="button button--ghost" href="#one-pager">Download the 1-Pager</a>
+          <a class="button button--ghost" href="assets/ARBA-1Pager.pdf" download="ARBA-1Pager.pdf">Download the 1-Pager</a>
         </div>
         <div class="hero__meta">
           <span>Hosted by BioTara and partners</span>
@@ -257,18 +257,6 @@
               Thank you for joining the ARBA Founding Circle! Your registration has been received — our team will reach out shortly with the next steps toward the COP30 launch in Belém. Together, we’re shaping the future of regenerative beauty and protecting the Amazon through collaboration, science, and storytelling.
             </p>
           </form>
-        </div>
-      </section>
-
-      <section class="section section--download" id="one-pager" data-animate style="--delay: 0ms;">
-        <div class="section__content" data-animate style="--delay: 40ms;">
-          <h2 class="section__title">Download the ARBA 1-Pager</h2>
-          <p class="section__lead">
-            Shareable overview of the alliance, mission, and participation pathways.
-          </p>
-          <a class="button button--ghost" href="assets/ARBA-1Pager.pdf" target="_blank" rel="noopener">
-            Download PDF
-          </a>
         </div>
       </section>
 
