Fix HTML entity encoding for ampersands

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
   <body>
     <div class="page-gradient"></div>
     <header class="hero" id="top">
+      <div class="hero__overlay"></div>
       <div class="hero__content" data-animate style="--delay: 0ms;">
+        <nav class="hero__nav">
+          <a href="#why-arba" class="hero__pill">Why ARBA</a>
+          <a href="#what-we-do" class="hero__pill">What We Do</a>
+          <a href="#member-benefits" class="hero__pill">Member Benefits</a>
+          <a href="#join" class="hero__pill">Join</a>
+        </nav>
         <p class="hero__tagline">Launching at COP30 · Belém — November 2025</p>
         <h1 class="hero__title">
           Amazonian Regenerative Beauty Alliance
@@ -71,7 +78,7 @@
         </div>
         <div class="grid">
           <article class="tile" data-animate style="--delay: 80ms;">
-            <h3>Educate &amp; Inspire</h3>
+            <h3>Educate & Inspire</h3>
             <p>
               Build global understanding of Amazonian ingredients through open-source data, ingredient monographs, and science communication.
             </p>
@@ -103,7 +110,7 @@
           <article class="tile" data-animate style="--delay: 180ms;">
             <h3>Innovate Together</h3>
             <p>
-              Support collaborative R&amp;D, extraction technology, and circular business models.
+              Support collaborative R&D, extraction technology, and circular business models.
             </p>
           </article>
         </div>
@@ -122,7 +129,7 @@
         <div class="section__columns">
           <ul class="list" data-animate style="--delay: 80ms;">
             <li>Beauty, wellness, and personal-care brands using natural ingredients</li>
-            <li>Ingredient manufacturers, R&amp;D labs, and formulators</li>
+            <li>Ingredient manufacturers, R&D labs, and formulators</li>
             <li>Amazonian cooperatives and producer networks</li>
             <li>NGOs, certification bodies, and academic partners</li>
             <li>Impact investors, climate-finance, and philanthropic actors</li>
@@ -212,7 +219,7 @@
             <div class="form__group">
               <label>Areas of Interest / Action*</label>
               <div class="form__options form__options--checkbox">
-                <label><input type="checkbox" name="Areas of Interest" value="Educating & Inspiring" /> Educating &amp; Inspiring</label>
+                <label><input type="checkbox" name="Areas of Interest" value="Educating & Inspiring" /> Educating & Inspiring</label>
                 <label><input type="checkbox" name="Areas of Interest" value="Defining Integrity" /> Defining Integrity</label>
                 <label><input type="checkbox" name="Areas of Interest" value="Strengthening Communities" /> Strengthening Communities</label>
                 <label><input type="checkbox" name="Areas of Interest" value="Telling Shared Stories" /> Telling Shared Stories</label>
